2.20.7:
  - Fix Extra_config when creating new server.
2.20.6:
  - Add support for attaching/detaching PCI/Serial on turned off machine already
2.20.5:
  - Fix cdrom_image type instead of default in plugin yaml.
  - add support of changing boot order during vm creation
  - boot_order, disk_keys, ethernet_keys to properties of node
    cloudify.nodes.vsphere.OvfDeployment & cloudify.nodes.vsphere.Server
  - add disk_size property to server node to control disk size
2.20.4:
  - Add change_boot_order operation and new ISO type -upload ISO to datastore-.
2.20.3:
  - Add boot_firmware support to OVF.
2.20.2:
  - CYBL-2073-Handle-NVRAM-File.
2.20.1:
  - RND-537-deprecate-node-types.
  - Add Update support for Server/Storage.
  - handle ovf network mapping where user don't provide all ovf networks.
  - Add Cdrom support to OVF.
2.20.0:
  - Add Ovf Deploy support.
  - Add Snapshot with memory support.
  - Add VM cloning feature.
  - Add Devices attachment support [usb/serial/pci-passthrough].
2.19.19: CYBL-2038 pass the correct argument to storage resize.
2.19.18: Check vm_folder against its data_center when specified.
2.19.17: Delete use_existing_resource. Change use_external_resource default from using intrinsic functions to boolean.
2.19.16: CYBL-1800 Improve vsphere.cloudify_vsphere.contentlibrary.deployment.delete to delete the VM from the infrastructure
2.19.15: Support check drift.
2.19.14: DSL 1_4 and redhat 8 wagon.
2.19.13: CYBL-1661 modify NIC connectable definition to enforce connected state.
2.19.12: Rebuild.
2.19.11: Build Aarch now
2.19.10: Fix deprecated cookie authentication for content library and fix get_state retries.
2.19.9: Fix minor issues of compatibility with old blueprints and improved get_state logic to skip if no need to start the vm.
2.19.8: Rerelease with Aarch64 Wagon.
2.19.7: RD-3253 vsphere plugin does no fetch IP address for os_family "other"
2.19.6: RD-3158-VM-Resize, Add a "not hot add" functionality to the resize_server operation .