@@ -1,5 +1,6 @@
 2.20.7:
   - Fix Extra_config when creating new server.
+  - Make cpu/memory hot_add/remove configurable.
 2.20.6:
   - Add support for attaching/detaching PCI/Serial on turned off machine already
 2.20.5:
